--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "ic_launcher"
   ios: false
-  image_path: "assets/logo.jpg"
+  image_path: "assets/logo.png"
   min_sdk_android: 21
 
 flutter:
